solved table alignment after merge

--- a/src/App.css
+++ b/src/App.css
@@ -871,5 +871,5 @@ input[type="file"] {
 }
 
 .table-text-pad {
-  padding: 0 20px !important;
+  padding: 10px 20px !important;
 }
